--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
     <div class="while">
-        <img src="foto.jpg" alt="">
+        <img src="Foto.jpg" alt="">
         <h3>Riki Pajri_41215578</h3>
         <h2>About Me</h2>
         <ul>
